# simple-onetime-link

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  example_use_en.md  example_use_ru.md  example_web_server.md  pyproject.toml
src/: __init__.py  config.py  main.py
tests/: example.py  test.py
